# ai-challenge

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  summary.txt
app/: __init__.py  app.py  config.py  openrouter_client.py  prompts.py  reviewer.py
