[tool.poetry]
name = "ai-challenge"
version = "0.1.0"
description = ""
authors = ["Mubashir Zamir <zamir.mubashir@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.55.0"
openai = "^2.29.0"
python-dotenv = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
